force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Retention_Line__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention_Line__c</fullName>
    <label>Retention (Line)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>