force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Retroactive_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Retroactive_Date__c</fullName>
    <label>Retroactive Date</label>
    <type>Date</type>
</CustomField>