force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Return_Period_Entry__c.field-meta.xml
<CustomField>
    <fullName>VG_Return_Period_Entry__c</fullName>
    <label>Return Period Entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>