force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_Scheme_Name__c</fullName>
    <label>Scheme Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>