force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_Share__c</fullName>
    <label>Share</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>