force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Signed_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_Signed_Share__c</fullName>
    <label>Signed Share</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>