force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Sub_broker__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_broker__c</fullName>
    <label>Sub broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>