force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Sub_Coverages__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_Coverages__c</fullName>
    <label>Sub Coverages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motor Third Party</fullName>
            </value>
            <value>
                <fullName>General Third Party</fullName>
            </value>
            <value>
                <fullName>Political Violence</fullName>
            </value>
            <value>
                <fullName>Specie</fullName>
            </value>
            <value>
                <fullName>Cash in transit</fullName>
            </value>
            <value>
                <fullName>Cash in Safe</fullName>
            </value>
            <value>
                <fullName>Products Liability</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>Workmens Compensation</fullName>
            </value>
            <value>
                <fullName>Employers Liability</fullName>
            </value>
            <value>
                <fullName>Personal Accident</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Inland Transit</fullName>
            </value>
            <value>
                <fullName>Agriculture Livestock</fullName>
            </value>
            <value>
                <fullName>Agriculture Crop</fullName>
            </value>
            <value>
                <fullName>Bankers Blanket Bond</fullName>
            </value>
            <value>
                <fullName>Fire &amp; Allied Perils</fullName>
            </value>
            <value>
                <fullName>Onshore Energy</fullName>
            </value>
            <value>
                <fullName>Machinery Breakdown</fullName>
            </value>
            <value>
                <fullName>Constuction All Risks</fullName>
            </value>
            <value>
                <fullName>Marine Hull</fullName>
            </value>
            <value>
                <fullName>Marine Cargo</fullName>
            </value>
            <value>
                <fullName>Aviation Hull</fullName>
            </value>
            <value>
                <fullName>Aviation Cargo</fullName>
            </value>
            <value>
                <fullName>Aviation Spares</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Stock Throughput</fullName>
            </value>
            <value>
                <fullName>Offshore Energy</fullName>
            </value>
            <value>
                <fullName>PML Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>