force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>VG_Sum_Insured__c</fullName>
    <label>Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>