force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Swing_Load__c.field-meta.xml
<CustomField>
    <fullName>VG_Swing_Load__c</fullName>
    <label>Swing Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>