force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Technical_UW_Rate_Annual__c.field-meta.xml
<CustomField>
    <fullName>VG_Technical_UW_Rate_Annual__c</fullName>
    <label>Technical UW Rate (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>