force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Territorial_Limits__c.field-meta.xml
<CustomField>
    <fullName>VG_Territorial_Limits__c</fullName>
    <label>Territorial Limits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Worldwide</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>World wide excluding North America</fullName>
            </value>
            <value>
                <fullName>World wide excluding North America but including</fullName>
            </value>
            <value>
                <fullName>business trips and trade shows world wide</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Rest of world excluding North America</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Great Britain</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>Isle of Man</fullName>
            </value>
            <value>
                <fullName>Channel Islands</fullName>
            </value>
            <value>
                <fullName>Limit A</fullName>
            </value>
            <value>
                <fullName>Limit B</fullName>
            </value>
            <value>
                <fullName>Limit C</fullName>
            </value>
            <value>
                <fullName>Limit D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>