force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Transaction_Effective_date__c.field-meta.xml
<CustomField>
    <fullName>VG_Transaction_Effective_date__c</fullName>
    <label>Transaction Effective date</label>
    <type>Date</type>
</CustomField>