force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>MTA</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Revision of Cover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>