force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Use__c.field-meta.xml
<CustomField>
    <fullName>VG_Use__c</fullName>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SD&amp;P</fullName>
            </value>
            <value>
                <fullName>Hire &amp; Reward</fullName>
            </value>
            <value>
                <fullName>Private Hire</fullName>
            </value>
            <value>
                <fullName>Public Hire</fullName>
            </value>
            <value>
                <fullName>Own Goods</fullName>
            </value>
            <value>
                <fullName>Business Use – Class 1</fullName>
            </value>
            <value>
                <fullName>Business Use – Class 2</fullName>
            </value>
            <value>
                <fullName>Business Use – Class 3</fullName>
            </value>
            <value>
                <fullName>OBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>