force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>VG_Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>