force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>Cars – High Value</fullName>
            </value>
            <value>
                <fullName>Buses – 17+ seats</fullName>
            </value>
            <value>
                <fullName>Coaches – 17 + seats</fullName>
            </value>
            <value>
                <fullName>Minibuses – upto 7 seats</fullName>
            </value>
            <value>
                <fullName>Minibuses – upto 16 seats</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 3.5t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 7.5t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 12t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 18t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 24t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 30t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles upto 44t</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles over 44t</fullName>
            </value>
            <value>
                <fullName>Trade Plate</fullName>
            </value>
            <value>
                <fullName>Ghost Vehicle</fullName>
            </value>
            <value>
                <fullName>Motor Cycle</fullName>
            </value>
            <value>
                <fullName>Special Types</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Cars – Bluelight</fullName>
            </value>
            <value>
                <fullName>Vans – Bluelight</fullName>
            </value>
            <value>
                <fullName>Fire Engine</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Motorcycle – Bluelight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>