force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Written_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_Written_Share__c</fullName>
    <label>Written Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>