force-app/main/default/objects/VG_Policy_Schedule_Asset__c/recordTypes/Affinity.recordType-meta.xml
<RecordType>
    <fullName>Affinity</fullName>
    <active>true</active>
    <label>Affinity</label>
</RecordType>