force-app/main/default/objects/VG_Policy_Schedule_Asset__c/recordTypes/Edison.recordType-meta.xml
<RecordType>
    <fullName>Edison</fullName>
    <active>true</active>
    <label>Edison</label>
</RecordType>