force-app/main/default/objects/VG_Policy_Schedule_Asset__c/recordTypes/Gentium.recordType-meta.xml
<RecordType>
    <fullName>Gentium</fullName>
    <active>true</active>
    <label>Gentium</label>
</RecordType>