force-app/main/default/objects/VG_Policy_Schedule_Asset__c/recordTypes/Imara.recordType-meta.xml
<RecordType>
    <fullName>Imara</fullName>
    <active>true</active>
    <label>Imara</label>
</RecordType>