force-app/main/default/objects/VG_Policy_Schedule_Asset__c/validationRules/RR_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>RR_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot update Risk Rating number</errorMessage>
</ValidationRule>